--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "private": true,
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -32,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
