--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://jackwhitehouse.info",
+  "homepage": "https://jackAwhitehouse.github.io/test-portfolio",
   "private": true,
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
